--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
-  "name": "homework_1",
-  "version": "1.0.0",
-  "description": "first homework for course on leverX",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "build": "eslint . && prettier --check .",
-    "dev": "node --inspect index.js",
-    "lint": "eslint .",
-    "prettier:check": "prettier --check ."
-  },
-  "author": "Nikita Lysiuk",
-  "license": "MIT",
-  "dependencies": {
-    "dotenv": "^16.4.5"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.11.1",
-    "eslint": "^9.11.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "globals": "^15.10.0",
-    "husky": "^9.1.6",
-    "prettier": "^3.3.3",
-    "winston": "^3.14.2"
-  }
+    "name": "homework_1",
+    "version": "1.0.0",
+    "description": "first homework for course on leverX",
+    "main": "index.js",
+    "scripts": {
+        "start": "node index.js",
+        "build": "eslint --fix . && prettier --check --write .",
+        "dev": "node --inspect index.js",
+        "lint": "eslint .",
+        "prettier:check": "prettier --check ."
+    },
+    "author": "Nikita Lysiuk",
+    "license": "MIT",
+    "dependencies": {
+        "dotenv": "^16.4.5"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.11.1",
+        "eslint": "^9.11.1",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-prettier": "^5.2.1",
+        "globals": "^15.10.0",
+        "husky": "^9.1.6",
+        "prettier": "^3.3.3",
+        "winston": "^3.14.2"
+    }
 }
