--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "description": "first homework for course on leverX",
     "main": "index.js",
+    "type": "module",
     "scripts": {
         "start": "node index.js",
         "build": "eslint --fix . && prettier --check --write .",
@@ -13,7 +14,13 @@
     "author": "Nikita Lysiuk",
     "license": "MIT",
     "dependencies": {
-        "dotenv": "^16.4.5"
+        "bcrypt": "^5.1.1",
+        "dotenv": "^16.4.5",
+        "express": "^4.21.0",
+        "jsonwebtoken": "^9.0.2",
+        "nodemailer": "^6.9.15",
+        "uuid": "^10.0.0",
+        "validator": "^13.12.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.11.1",
