--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "author": "Nikita Lysiuk",
     "license": "MIT",
     "dependencies": {
-        "dotenv": "^16.4.5"
+        "dotenv": "^16.4.5",
+        "winston": "^3.15.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.11.1",
@@ -22,7 +23,6 @@
         "eslint-plugin-prettier": "^5.2.1",
         "globals": "^15.10.0",
         "husky": "^9.1.6",
-        "prettier": "^3.3.3",
-        "winston": "^3.14.2"
+        "prettier": "^3.3.3"
     }
 }
