--- a/package.json
+++ b/package.json
@@ -1,29 +1,44 @@
 {
-    "name": "homework_2",
+    "name": "homework_3",
     "version": "1.0.0",
-    "description": "first homework for course on leverX",
-    "main": "index.js",
+    "description": "third homework for course on leverX",
+    "main": "src/index.ts",
     "type": "module",
     "scripts": {
-        "start": "node index.js",
-        "build": "eslint --fix . && prettier --check --write .",
-        "dev": "node --inspect index.js",
+        "start": "npx tsx src/index.ts",
+        "build": "tsc && eslint --fix . && prettier --check --write .",
+        "dev": "ts-node --inspect index.ts",
         "lint": "eslint .",
         "prettier:check": "prettier --check ."
     },
     "author": "Nikita Lysiuk",
     "license": "MIT",
     "dependencies": {
+        "bcrypt": "^5.1.1",
         "dotenv": "^16.4.5",
+        "express": "^4.21.1",
+        "jsonwebtoken": "^9.0.2",
+        "nodemailer": "^6.9.15",
+        "uuid": "^10.0.0",
+        "validator": "^13.12.0",
         "winston": "^3.15.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.11.1",
+        "@types/bcrypt": "^5.0.2",
+        "@types/express": "^5.0.0",
+        "@types/jsonwebtoken": "^9.0.7",
+        "@types/node": "^22.7.5",
+        "@types/nodemailer": "^6.4.16",
+        "@types/uuid": "^10.0.0",
+        "@types/validator": "^13.12.2",
         "eslint": "^9.11.1",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.2.1",
         "globals": "^15.10.0",
         "husky": "^9.1.6",
-        "prettier": "^3.3.3"
+        "prettier": "^3.3.3",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.6.3"
     }
 }
