--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,27 @@
 node_modules/
-.env
-
-.husky/_
-
-.vscode/
-.idea/
 
 dist/
 build/
 
-*.log
+.env
 
-*.json
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+.vscode/
+.idea/
+
+.DS_Store 
+Thumbs.db 
+*.swp     
+
+.husky/_
+
+coverage/
+
+*.tsbuildinfo
+
+.pids
+pm2.log
