fixing git.example

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-PORT=port
-POST_DATA_PATH=path
-USER_DATA_PATH=path
+PORT=3000
+POST_DATA_PATH=posts.json
+USER_DATA_PATH=users.json
 
-EMAIL=your_email
-PASSWORD=your_password (if your email is gmail, you need to set up an app password)
+EMAIL=pakamaka345@gmail.com
+PASSWORD=knlo hgwi drzy vned
 
-SECRET_KEY=your_secret
+SECRET_KEY=ULNWg4rQjNv/0TgC6iUIhg==
