--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ PORT=3000
 POST_DATA_PATH=posts.json
 USER_DATA_PATH=users.json
 
-EMAIL=pakamaka345@gmail.com
+EMAIL=your.email@gmail.com
 PASSWORD=knlo hgwi drzy vned
 
 SECRET_KEY=ULNWg4rQjNv/0TgC6iUIhg==
