--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,6 @@ POST_DATA_PATH=posts.json
 USER_DATA_PATH=users.json
 
 EMAIL=your.email@gmail.com
-PASSWORD=knlo hgwi drzy vkca
+PASSWORD=password
 
-SECRET_KEY=ULNWg4rQjNv/0TgC6iUIhg==
+SECRET_KEY=some_secret_key
