--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,12 @@
 PORT=3000
-POST_DATA_PATH=posts.json
-USER_DATA_PATH=users.json
 
 EMAIL=your.email@gmail.com
 PASSWORD=password
 
 SECRET_KEY=some_secret_key
+
+DB_HOST=localhost
+DB_PORT=3306
+DB_USER=root
+DB_PASSWORD=password
+DB_NAME=name_of_your_database
