--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "homework_4",
+  "name": "homework_5",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -25,14 +25,17 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/typeorm": "^10.0.2",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.11.3",
     "nodemailer": "^6.9.15",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "typeorm": "^0.3.20",
     "uuid": "^10.0.0",
     "winston": "^3.15.0"
   },
