--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,8 @@
-PORT=port
+PORT=3000
+POST_DATA_PATH=posts.json
+USER_DATA_PATH=users.json
+
+EMAIL=your.email@gmail.com
+PASSWORD=password
+
+SECRET_KEY=secret_key
