--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,30 @@
 node_modules/
-.env
-
-.husky/_
-
-.vscode/
-.idea/
 
 dist/
 build/
 
+.env
+
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+.vscode/
+.idea/
+
+.DS_Store 
+Thumbs.db 
+*.swp     
+
+.husky/_
+
+coverage/
+
+*.tsbuildinfo
+
+.pids
+pm2.log
 
 posts.json
 users.json
-backup.json
