add telegram interceptor

--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,6 @@ STRIPE_WEBHOOK_SECRET=whsec_iMkGKXC****************
 
 EMAIL=example@test.com
 PASSWORD=password
+
+TELEGRAM_BOT_TOKEN=7987724341:AAGdwFQe****************
+TELEGRAM_CHANNEL_ID=channel_id
