--- a/package.json
+++ b/package.json
@@ -38,13 +38,15 @@
         "cookie-parser": "^1.4.7",
         "husky": "^9.1.6",
         "ioredis": "^5.4.1",
+        "nestjs-telegraf": "^2.8.1",
         "nodemailer": "^6.9.16",
         "passport": "^0.7.0",
         "passport-google-oauth20": "^2.0.0",
         "redis": "^4.7.0",
         "reflect-metadata": "^0.2.0",
         "rxjs": "^7.8.1",
-        "stripe": "^17.3.0"
+        "stripe": "^17.3.0",
+        "telegraf": "^4.16.3"
     },
     "devDependencies": {
         "@nestjs/cli": "^10.0.0",
