--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@nestjs/jwt": "^10.2.0",
         "@nestjs/passport": "^10.0.3",
         "@nestjs/platform-express": "^10.0.0",
+        "@nestjs/swagger": "^8.0.2",
         "@prisma/client": "^5.21.1",
         "aws-sdk": "^2.1691.0",
         "axios": "^1.7.7",
@@ -46,6 +47,7 @@
         "reflect-metadata": "^0.2.0",
         "rxjs": "^7.8.1",
         "stripe": "^17.3.0",
+        "swagger-ui-express": "^5.0.1",
         "telegraf": "^4.16.3"
     },
     "devDependencies": {
